# services

./: .gitignore  Caddyfile  bbbcntr.dockerfile  bot_api.dockerfile  docker-compose.yaml  re-deploy-bbbcntr.sh
bbbcntr_rust/: .env  Cargo.toml  docs.md
bbbcntr_rust/migrations/: 20240911084908_clients.sql  20240911091621_users.sql  20240911091628_tokens.sql  20240911092908_users.sql  20240912162045_pending_clients.sql
bbbcntr_rust/src/: controllers.rs  errors.rs  lib.rs  main.rs  models.rs  tests.rs
bbbcntr_rust/static/: tailwind.config.js
bbbcntr_rust/static/css/: app.css  index.css
