[package]
name = "bbbcntr_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http2", "ws", "macros", "multipart"] }
serde = { version = "1.0.210", features = ["alloc", "derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "fs", "full", "mio"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
tera = { version = "1", default-features = false }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
sqlx = { version = "0.8.2", features = ["json", "postgres", "runtime-tokio-native-tls", "chrono"] }
chrono = { version = "0.4.*", features = ["serde"] }
sqlx-core = "0.8.2"
anyhow = "1.0.87"
tower = { version = "0.5.1", features = ["util"] }
